modified img alt's for better Accessibility & Semantique updates & modified a little <p> in page bilbao

--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -162,7 +162,7 @@
               <figure class="image">
                 <img
                   src="img/places/bilbao/san-anton-bridge.jpg"
-                  alt="San Anton Bridge"
+                  alt="Historic San Anton Bridge over Nervión River in Bilbao"
                 />
                 <figcaption>San Anton Bridge</figcaption>
               </figure>
@@ -203,11 +203,11 @@
           </li>
 
           <li>
-            <article class="image-item-content , reverse">
+            <article class="image-item-content reverse">
               <figure class="image">
                 <img
                   src="img/places/bilbao/basilica-begona1.avif"
-                  alt="Begona Basilica"
+                  alt="Exterior view of Begona Basilica on the hill overlooking Bilbao"
                 />
                 <figcaption>Begona Basilica</figcaption>
               </figure>
@@ -245,7 +245,7 @@
               <figure class="image">
                 <img
                   src="img/places/bilbao/plaza-unamuno-miguel.avif"
-                  alt="Plaza Unamuno Miguel"
+                  alt="Bustling Plaza Unamuno Miguel in Casco Viejo, Bilbao"
                 />
                 <figcaption>Plaza Unamuno Miguel</figcaption>
               </figure>
@@ -281,11 +281,11 @@
           </li>
 
           <li>
-            <article class="image-item-content , reverse">
+            <article class="image-item-content reverse">
               <figure class="image">
                 <img
                   src="img/places/bilbao/plaza-berria2.jpg"
-                  alt="Plaza Berria"
+                  alt="Crowded Plaza Berria with pintxo bars in Bilbao’s old town"
                 />
                 <figcaption>Plaza Berria</figcaption>
               </figure>
@@ -328,8 +328,8 @@
                     data-img-src="img/places/bilbao/tortilla-de-bacalao.jpg"
                     ><strong>tortilla de bacalao</strong></span
                   >
-                  (salted cod omelette). Whether you're enjoying a drink or
-                  sampl
+                  (salted cod omelette). Whether you're having a drink or a
+                  snack, Plaza Berria captures the true flavor of Bilbao.
                 </p>
               </div>
             </article>
@@ -341,7 +341,7 @@
                 <figure>
                   <img
                     src="img/places/bilbao/arriaga-theatre5.jpg"
-                    alt="Arriaga Theatre"
+                    alt="Neoclassical Arriaga Theatre façade in Bilbao city center"
                   />
                   <figcaption>Arriaga Theatre</figcaption>
                 </figure>
@@ -383,11 +383,11 @@
           </li>
 
           <li>
-            <article class="image-item-content , reverse">
+            <article class="image-item-content reverse">
               <figure class="image">
                 <img
                   src="img/places/bilbao/dona-casilda-park2.jpg"
-                  alt="Dona Casilda Park"
+                  alt="Tranquil Dona Casilda Park with pond and fountains in Bilbao"
                 />
                 <figcaption>Dona Casilda Park</figcaption>
               </figure>
@@ -421,7 +421,7 @@
               <figure class="image">
                 <img
                   src="img/places/bilbao/bilbao-fine-arts-museum1.avif"
-                  alt="Bilbao Fine Arts Museum"
+                  alt="Entrance of Bilbao Fine Arts Museum with visitors"
                 />
                 <figcaption>Bilbao Fine Arts Museum</figcaption>
               </figure>
@@ -456,11 +456,11 @@
           </li>
 
           <li>
-            <article class="image-item-content , reverse">
+            <article class="image-item-content reverse">
               <figure class="image">
                 <img
                   src="img/places/bilbao/playa-de-sopelana1.jpg"
-                  alt="Playa de Sopelana"
+                  alt="Golden sandy beach of Playa de Sopelana with waves and surfers"
                 />
                 <figcaption>Playa de Sopelana</figcaption>
               </figure>
@@ -495,7 +495,7 @@
               <figure class="image">
                 <img
                   src="img/places/bilbao/san-juan-de-gaztelugatxe3.jpg"
-                  alt="San Juan de Gaztelugatxe"
+                  alt="San Juan de Gaztelugatxe island and winding stone staircase"
                 />
                 <figcaption>San Juan de Gaztelugatxe</figcaption>
               </figure>
@@ -537,7 +537,7 @@
         <iframe
           width="420"
           height="315"
-          src="https://www.youtube.com/embed/watch?v=Biu4ksqOjDs"
+          src="https://www.youtube.com/embed/Biu4ksqOjDs"
         >
         </iframe>
       </section>
@@ -617,12 +617,17 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/">
-            <img src="/img/icons/insta.png" alt="instagram-logo"
+            <img
+              src="/img/icons/insta.png"
+              alt="Instagram logo link to social media page"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook-logo" />
+            <img
+              src="/img/icons/facebook.png"
+              alt="Facebook logo link to social media page"
+            />
           </a>
         </li>
       </ul>
