--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -111,7 +111,10 @@
         <ul id="destinations">
           <li class="destination">
             <article>
-              <img src="/img/places/madrid.webp" alt="Madrid views" />
+              <img
+                src="/img/places/madrid.webp"
+                alt="Skyline and cultural landmarks of Madrid, Spain"
+              />
               <a href="/madrid.html">
                 <p>Madrid <strong>Spain</strong></p>
               </a>
@@ -119,7 +122,10 @@
           </li>
           <li class="destination">
             <article>
-              <img src="/img/places/izmir.jpeg" alt="Izmir Clock Tower " />
+              <img
+                src="/img/places/izmir.jpeg"
+                alt="Izmir Clock Tower in Konak Square, Turkey"
+              />
               <a href="/izmir.html">
                 <p>Izmir <strong>Turkey</strong></p>
               </a>
@@ -127,7 +133,10 @@
           </li>
           <li class="destination">
             <article>
-              <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
+              <img
+                src="/img/places/tokyo.jpg"
+                alt="Tokyo city skyline with modern buildings and lights, Japan"
+              />
               <a href="/#"
                 ><p>Tokyo <strong>Japan</strong></p></a
               >
@@ -140,12 +149,17 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/">
-            <img src="/img/icons/insta.png" alt="instagram-logo"
+            <img
+              src="/img/icons/insta.png"
+              alt="Instagram logo link to social media page"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook-logo" />
+            <img
+              src="/img/icons/facebook.png"
+              alt="Facebook logo link to social media page"
+            />
           </a>
         </li>
       </ul>
