--- a/Web/www/izmir.html
+++ b/Web/www/izmir.html
@@ -156,7 +156,7 @@
               <figure class="image">
                 <img
                   src="img/places/izmir/izmir-saat-kulesi4.jpeg"
-                  alt="izmir clock tower"
+                  alt="Izmir Clock Tower in Konak Square, iconic landmark of Izmir, Turkey"
                 />
                 <figcaption>Izmir Clock Tower</figcaption>
               </figure>
@@ -201,7 +201,7 @@
                 <figure class="image">
                   <img
                     src="img/places/izmir/izmir-efes.jpeg"
-                    alt="Ephesus Library from distance"
+                    alt="Library of Celsus at Ephesus, ancient Roman library in Izmir, Turkey"
                   />
                   <figcaption>Ephesus Library of Celsus</figcaption>
                 </figure>
@@ -230,7 +230,7 @@
                   <img
                     class="horizontal-images"
                     src="img/places/izmir/izmir-efes-tiyatro2.jpeg"
-                    alt="Ephesus Theater"
+                    alt="Grand Theater of Ephesus, ancient amphitheater with seating capacity 25,000"
                   />
                   <figcaption>Ephesus Theater</figcaption>
                 </figure>
@@ -273,7 +273,7 @@
               <figure class="image">
                 <img
                   src="img/places/izmir/izmir-kemeraltı-çarşı3.jpeg"
-                  alt="Izmir Kemeraltı Bazaar"
+                  alt="Vibrant Izmir Kemeraltı Bazaar market streets"
                 />
                 <figcaption>Izmir Kemeraltı Bazaar</figcaption>
               </figure>
@@ -332,7 +332,7 @@
                 <figure class="image">
                   <img
                     src="img/places/izmir/izmir-asansor.jpg"
-                    alt="Izmir Historical Elevator"
+                    alt="Historical Elevator in Izmir, connecting Karataş and Halil Rıfat Pasha areas"
                   />
                   <figcaption>Izmir Historical Elevator</figcaption>
                 </figure>
@@ -406,7 +406,7 @@
                   <img
                     class="horizontal-images"
                     src="img/places/izmir/izmir-dario-moreno.jpg"
-                    alt="A photo of Dario Moreno"
+                    alt="Famous singer Dario Moreno, cultural icon of Izmir"
                   />
                   <figcaption>Musician Dario Moreno</figcaption>
                 </figure>
@@ -544,21 +544,21 @@
               <figure class="image">
                 <img
                   src="img/places/izmir/izmir-alaçatı.jpg"
-                  alt="An Izmir Alaçatı street"
+                  alt="Stone street with bougainvillea flowers in Alaçatı, Izmir, Turkey"
                 />
                 <figcaption>Izmir Alaçatı</figcaption>
               </figure>
               <figure class="image">
                 <img
                   src="img/places/izmir/izmir-alaçatı2.jpg"
-                  alt="An Izmir Alaçatı street"
+                  alt="Stone street with bougainvillea flowers in Alaçatı, Izmir, Turkey"
                 />
                 <figcaption>Izmir Alaçatı</figcaption>
               </figure>
               <figure class="image">
                 <img
                   src="img/places/izmir/izmir-alaçatı3.jpg"
-                  alt="An Izmir Alaçatı street"
+                  alt="Stone street with bougainvillea flowers in Alaçatı, Izmir, Turkey"
                 />
                 <figcaption>Izmir Alaçatı</figcaption>
               </figure>
@@ -638,12 +638,17 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/">
-            <img src="/img/icons/insta.png" alt="instagram-logo"
+            <img
+              src="/img/icons/insta.png"
+              alt="Instagram logo link to social media page"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook-logo" />
+            <img
+              src="/img/icons/facebook.png"
+              alt="Facebook logo link to social media page"
+            />
           </a>
         </li>
       </ul>
