--- a/Web/www/madrid.html
+++ b/Web/www/madrid.html
@@ -166,7 +166,7 @@
           <li>
             <article>
               <div class="parallax" id="idRoyalPalace">
-                <div class="caption">
+                <div class="caption" role="img" aria-label="Royal Palace of Madrid exterior view">
                   <span class="border">Royal Palace of Madrid</span>
                 </div>
               </div>
@@ -210,7 +210,7 @@
           <li>
             <article>
               <div class="parallax" id="plazaMayor">
-                <div class="caption">
+                <div class="caption" role="img" aria-label="Historic Plaza Mayor square in Madrid">
                   <span class="border">Plaza Mayor</span>
                 </div>
               </div>
@@ -253,7 +253,7 @@
           <li>
             <article>
               <div class="parallax" id="retiroParc">
-                <div class="caption">
+                <div class="caption" role="img" aria-label="Lush Retiro Park with pond in Madrid">
                   <span class="border">Retiro Park</span>
                 </div>
               </div>
@@ -369,12 +369,17 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/">
-            <img src="/img/icons/insta.png" alt="instagram-logo"
+            <img
+              src="/img/icons/insta.png"
+              alt="Instagram logo link to social media page"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook-logo" />
+            <img
+              src="/img/icons/facebook.png"
+              alt="Facebook logo link to social media page"
+            />
           </a>
         </li>
       </ul>
