--- a/Web/www/register.html
+++ b/Web/www/register.html
@@ -153,12 +153,17 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/">
-            <img src="/img/icons/insta.png" alt="instagram-logo"
+            <img
+              src="/img/icons/insta.png"
+              alt="Instagram logo link to social media page"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook-logo" />
+            <img
+              src="/img/icons/facebook.png"
+              alt="Facebook logo link to social media page"
+            />
           </a>
         </li>
       </ul>
