fix(css): stabilize hover effects and remove layout shift in index page "highlights"

--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -111,35 +111,35 @@
         <ul id="destinations">
           <li class="destination">
             <article>
-              <img
-                src="/img/places/madrid.webp"
-                alt="Skyline and cultural landmarks of Madrid, Spain"
-              />
               <a href="/madrid.html">
+                <img
+                  src="/img/places/madrid.webp"
+                  alt="Skyline and cultural landmarks of Madrid, Spain"
+                />
                 <p>Madrid <strong>Spain</strong></p>
               </a>
             </article>
           </li>
           <li class="destination">
             <article>
-              <img
-                src="/img/places/izmir.jpeg"
-                alt="Izmir Clock Tower in Konak Square, Turkey"
-              />
               <a href="/izmir.html">
+                <img
+                  src="/img/places/izmir.jpeg"
+                  alt="Izmir Clock Tower in Konak Square, Turkey"
+                />
                 <p>Izmir <strong>Turkey</strong></p>
               </a>
             </article>
           </li>
           <li class="destination">
             <article>
-              <img
-                src="/img/places/tokyo.jpg"
-                alt="Tokyo city skyline with modern buildings and lights, Japan"
-              />
-              <a href="/#"
-                ><p>Tokyo <strong>Japan</strong></p></a
-              >
+              <a href="#">
+                <img
+                  src="/img/places/tokyo.jpg"
+                  alt="Tokyo city skyline with modern buildings and lights, Japan"
+                />
+                <p>Tokyo <strong>Japan</strong></p>
+              </a>
             </article>
           </li>
         </ul>
